--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/icons">
-        <file alias="bitcoin">res/icons/novacoin-128.png</file>
+        <file alias="bitcoin">res/icons/electriccoin-128.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
         <file alias="send">res/icons/send.png</file>
-        <file alias="toolbar">res/icons/novacoin-16.png</file>
+        <file alias="toolbar">res/icons/electriccoin-16.png</file>
         <file alias="connect_0">res/icons/connect0_16.png</file>
         <file alias="connect_1">res/icons/connect1_16.png</file>
         <file alias="connect_2">res/icons/connect2_16.png</file>
@@ -22,8 +22,8 @@
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
-        <file alias="bitcoin_testnet">res/icons/novacoin-128.png</file>
-        <file alias="toolbar_testnet">res/icons/novacoin-16.png</file>
+        <file alias="bitcoin_testnet">res/icons/electriccoin-128.png</file>
+        <file alias="toolbar_testnet">res/icons/electriccoin-16.png</file>
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
@@ -51,5 +51,7 @@
     <qresource prefix="/translations">
         <file alias="en">locale/bitcoin_en.qm</file>
         <file alias="ru">locale/bitcoin_ru.qm</file>
+        <file alias="zh_CN">locale/bitcoin_zh_CN.qm</file>
+        <file alias="zh_TW">locale/bitcoin_zh_TW.qm</file>
     </qresource>
 </RCC>
